--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
     <distributionManagement>
         <site>
             <id>shrek</id>
-            <url>scp://@shrek.unideb.hu:2222/home/huseynzade/public_html/${project.artifactId}</url>
+            <url>scp://huseynzade@shrek.unideb.hu:2222/home/huseynzade/public_html/${project.artifactId}</url>
         </site>
     </distributionManagement>
 </project>
